--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -6,23 +6,6 @@
 	height: 100%;
 }
 
-.container ul {
+.container ol {
 	list-style: decimal;
-}
-
-.container ul li {
-	margin-top: 1rem;
-	font-size: 1.25rem;
-	transition: transform 100ms ease-in-out;
-	width: fit-content;
-}
-
-.container ul li:hover {
-	transform: scale(1.05);
-}
-
-.container ul li a {
-	color: #0059ff;
-	margin-left: 0.5rem;
-	text-decoration: none;
 }
