--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,3 +32,20 @@ button:disabled{
 	cursor: not-allowed;
 	opacity: .5;
 }
+
+.menu li {
+	margin-top: 1rem;
+	font-size: 1.25rem;
+	transition: transform 100ms ease-in-out;
+	width: fit-content;
+}
+
+.menu li:hover {
+	transform: scale(1.05);
+}
+
+.menu li a {
+	color: #0059ff;
+	margin-left: 0.5rem;
+	text-decoration: none;
+}
